HVAC Backup 2/objects/Local_Purchase__c(1).object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Local_Purchases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Local_Purchase_Line_Items__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Local_Purchase_Line_Items__c.Local_Purchase__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Local_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Local Purchases</relationshipLabel>
        <relationshipName>Local_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Local Purchase</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Local_Purchases</fullName>
        <columns>NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Local Purchases</label>
    </listViews>
    <listViews>
        <fullName>CMO_Queue_Local_Purchase</fullName>
        <filterScope>Queue</filterScope>
        <label>CMO Queue</label>
        <queue>CMO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMO_Queue_Local_Purchase1</fullName>
        <filterScope>Queue</filterScope>
        <label>CMO Queue</label>
        <queue>CMO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMO_Queue_Local_Purchase2</fullName>
        <filterScope>Queue</filterScope>
        <label>CMO Queue</label>
        <queue>CMO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_for_Approval_Local_Purchases</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending for Approval Local Purchases</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Local Purchase</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>